# kamer-pro

./: .gitignore  DEPLOYMENT.md  MIGRATION_GUIDE.md  NETWORK_OPTIMIZATION.md  NETWORK_OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  QUICK_START.md  README.md  _headers  docker-compose.yml  index.html  init-admin.sh  manifest.webmanifest  netlify.toml  package-lock.json  package.json  patch_listings.py  refactor.md  registerSW.js  robots.txt  sitemap.xml  sw.js  tailwind.config.ts  test_overpass.sh  workbox-3f23b678.js
.agent/workflows/: network-optimization-plan.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend-cluster.yml  deploy-frontend.yml
assets/: AccountSettings-C9uWk0f1.js  AccountSettings-D3JKyLmI.js  AccountSettings-Shr1HSEa.js  AccountSettings-y8pWxgeG.js  AdminDashboard-BcUR_vjp.js  AdminDashboard-DYeUSHQr.js  AdminDashboard-Dm12I15q.js  AdminDashboard-mRwdZNvY.js  Amenities-Ipxm_mxM.js  Amenities-LEhXFSGA.js  Amenities-Z8k799cA.js  Amenities-vrjtSK-j.js  BathroomEditor-B6mLDNo1.js  BathroomEditor-BZJR4TDQ.js  BathroomEditor-RbsrwsNY.js  BathroomEditor-ux-zZ7JX.js  BedroomEditor-CPwW02xu.js  BedroomEditor-CYF_C8mn.js  BedroomEditor-DJPf3w5F.js  BedroomEditor-DaNdPqmL.js  BookingSettings-CftY79DJ.js  BookingSettings-Dq2UkV6H.js  BookingSettings-_B_wAPWA.js  BookingSettings-fv9WEvUD.js  Calendar-B7kMqIq7.js  Calendar-BXY4e86K.js  Calendar-RtIS3a4u.js  Calendar-Tunl3UVy.js  Dashboard-AMysogX6.js  Dashboard-CbY5p96f.js  Dashboard-DMjA_D8I.js  Dashboard-KhnjojIj.js  Description-CrhOpHUd.js  Description-CrhRCwJ9.js  Description-DSnNQM8x.js  Description-U83xz53M.js  Footer-D45jx7FM.js  Footer-D_4nY92E.js  Footer-DqaNDUWV.js  Footer-dLxHC8b1.js  (+236 more)
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  SUPABASE_AUTH_USAGE.md  Shuttle.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal  dev.sqlite3  dev.sqlite3-shm  ensure_uploads_dir.sh  entrypoint.sh  knexfile.ts  package-lock.json  package.json  tsconfig.json
backend-rust/: .gitignore  Cargo.toml  dev.sqlite3  dev.sqlite3-shm  dev.sqlite3-wal
backend-rust/migrations/: 20251010155705_create_users_table.sql  20251010155901_create_products_table.sql  20251010160059_create_product_images_table.sql  20251010160243_create_user_roles_table.sql  20251014095947_make_email_nullable.sql  20251014_create_users_table.sql  20251015_create_cart_table.sql
backend/backend/: db.sqlite
backend/crates/kamer-accounts/: Cargo.toml
backend/crates/kamer-accounts/src/: routes.rs
backend/crates/kamer-admin/: Cargo.toml
backend/crates/kamer-admin/src/: admin.rs  lib.rs  reports.rs  roles.rs
backend/crates/kamer-api/: Cargo.toml
backend/crates/kamer-api/src/: aggregate.rs  config.rs  lib.rs  translate.rs  upload.rs
backend/crates/kamer-auth/: Cargo.toml
backend/crates/kamer-auth/src/: auth.rs  jwks.rs  lib.rs  routes.rs  supabase_auth.rs
backend/crates/kamer-bookings/: Cargo.toml
backend/crates/kamer-bookings/src/: lib.rs  routes.rs
backend/crates/kamer-calendar/: Cargo.toml
backend/crates/kamer-calendar/src/: routes.rs
backend/crates/kamer-core/: Cargo.toml
backend/crates/kamer-core/src/: error.rs  lib.rs  types.rs
backend/crates/kamer-db/: Cargo.toml
backend/crates/kamer-db/src/: lib.rs
backend/crates/kamer-listings/: Cargo.toml
backend/crates/kamer-listings/src/: routes.rs
backend/crates/kamer-messages/: Cargo.toml
backend/crates/kamer-messages/src/: routes.rs
backend/crates/kamer-storage/: Cargo.toml
backend/crates/kamer-storage/src/: lib.rs  s3.rs
backend/crates/kamer-wishlist/: Cargo.toml
backend/crates/kamer-wishlist/src/: routes.rs
backend/data/: app.db
backend/migrations/: 001_init.sql  002_calendar.sql  002_create_product_images_table.sql  003_add_photo_metadata.sql  003_create_user_roles_table.sql  004_account.sql  005_account_settings.sql  006_create_reviews_table.sql  006_sessions.sql  007_add_password_hash.sql  007_create_messages_tables.sql  008_add_cancellation_policy.sql  008_create_companies_table.sql  008_create_shops_table.sql  009_add_location_details.sql  009_add_shop_id_to_products.sql  009_create_shops_table.sql  010_create_architect_tables.sql  010_create_messages_tables.sql  011_create_wishlist_table.sql  012_create_admin_table.sql  012_create_listings_tables.sql  012_reports.sql  013_add_architect_credentials.sql  013_create_wishlist_table.sql  014_create_reviews.sql  014_make_user_id_nullable.sql  015_unique_review_per_guest.sql  016_optimization_indexes.sql  050_add_avatar_to_user_profiles.sql  051_perf_indexes.sql  052_search_indexes.sql  053_listing_publish_indexes.sql  054_global_perf_indexes.sql  055_critical_perf_indexes.sql  055_fix_conversations_foreign_keys.sql  056_add_supabase_id_to_users.sql  057_fix_messages_foreign_keys.sql  058_perf_host_queries.sql  060_add_location_and_languages.sql  (+3 more)
backend/src/: index.ts  main.rs  s3.rs
backend/src/db/migrations/: 20251009153330_create_users_table.ts  20251009153415_create_products_table.ts  20251009153515_create_product_images_table.ts  20251009154510_create_user_roles_table.ts  20251009160104_add_fields_to_products.ts  20251009161211_remove_image_url_from_products.ts
backend/src/middleware/: auth.rs  auth.ts  mod.rs  supabase_auth.rs
backend/src/routes/: account.rs  admin.rs  aggregate.rs  architect.rs  auth.rs  auth.ts  bookings.rs  calendar.rs  cart.rs  company.rs  listings.rs  messages.rs  middleware.rs  mod.rs  products.rs  products.ts  reports.rs  reviews.rs  roles.rs  roles.ts  shop.rs  shops.rs  translate.rs  upload.rs  upload.ts  wishlist.rs
charts/: rendered-backend.yaml  rendered-frontend.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  listings.json  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
helm-chart/: Chart.yaml  values.yaml
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
kamer-pro-chart/: Chart.yaml  DEPLOYMENT.md  values-local.yaml  values.yaml
src/: App.tsx  i18n.ts  main.tsx
(+207 files in other folders)
