[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-multipart = "0.4"
actix-cors = "0.6"
uuid = { version = "0.8", features = ["v4"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite", "macros", "chrono" ] }
bcrypt = "0.13"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json", "multipart"] }
bytes = "1.5"

[dev-dependencies]
cargo-watch = "8.5.2"
