[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["cookies", "compress-gzip", "compress-brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-multipart = "0.4"
actix-cors = "0.6"
uuid = { version = "0.8", features = ["v4"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono" ] }
bcrypt = "0.13"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json", "multipart"] }
bytes = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
moka = { version = "0.12", features = ["future"] }
num_cpus = "1.16"
sha1 = "0.10"
rmp-serde = "1.1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp", "webp-encoder"] }
hex = "0.4"
base64 = "0.21"
once_cell = "1.18"

[dev-dependencies]
cargo-watch = "8.5.2"
