[workspace]
members = [
    "crates/kamer-core",
    "crates/kamer-db",
    "crates/kamer-auth",
    "crates/kamer-storage",
    "crates/kamer-listings",
    "crates/kamer-bookings",
    "crates/kamer-messages",
    "crates/kamer-accounts",
    "crates/kamer-wishlist",
    "crates/kamer-calendar",
    "crates/kamer-admin",
    "crates/kamer-api",
]
resolver = "2"

[workspace.dependencies]
# Web framework
actix-web = { version = "4", features = ["cookies", "compress-gzip", "compress-brotli"] }
actix-multipart = "0.4"
actix-cors = "0.6"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }

# Authentication
bcrypt = "0.13"
jsonwebtoken = "9.3.0"

# Utilities
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures-util = "0.3"
bytes = "1.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.18"

# Caching
moka = { version = "0.12", features = ["future"] }

# Image processing
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp", "webp-encoder"] }

# Encoding
base64 = "0.21"
hex = "0.4"
sha1 = "0.10"

# Logging
log = "0.4"
env_logger = "0.9"

# System
num_cpus = "1.16"

[package]
name = "kamer-pro-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
kamer-core = { path = "crates/kamer-core" }
kamer-db = { path = "crates/kamer-db" }
kamer-auth = { path = "crates/kamer-auth" }
kamer-storage = { path = "crates/kamer-storage" }
kamer-listings = { path = "crates/kamer-listings" }
kamer-api = { path = "crates/kamer-api" }

actix-web = { workspace = true }
actix-cors = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
moka = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
cargo-watch = "8.5.2"
