[package]
name = "kamer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
kamer-core = { path = "../kamer-core" }
kamer-db = { path = "../kamer-db" }
kamer-auth = { path = "../kamer-auth" }
kamer-storage = { path = "../kamer-storage" }
kamer-listings = { path = "../kamer-listings" }
kamer-bookings = { path = "../kamer-bookings" }
kamer-messages = { path = "../kamer-messages" }
kamer-accounts = { path = "../kamer-accounts" }
kamer-wishlist = { path = "../kamer-wishlist" }
kamer-calendar = { path = "../kamer-calendar" }
kamer-admin = { path = "../kamer-admin" }

actix-web = { workspace = true }
actix-multipart = { workspace = true }
actix-cors = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
moka = { workspace = true }
log = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
