[package]
name = "kamer-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
kamer-core = { path = "../kamer-core" }
kamer-db = { path = "../kamer-db" }

actix-web = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
moka = { workspace = true }
