[package]
name = "kamer-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
kamer-core = { path = "../kamer-core" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
image = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
